--- a/index.html
+++ b/index.html
@@ -1,61 +1,52 @@
-<html>
-    <head> <title>
-        update name
-    </title>
-    <style type="text/css">
-    body{
-        margin: 20px;
-    }
-    h1{
-        margin-left: 5px;
-        margin-top: 3px;
-    }
-    #container{
-        margin-left: 250px;
-        width: 450px;
-        height: 250px;
-        border-radius: 8px;
-        border: 2px solid black;
-        background-color: rgb(236, 233, 14);
-    }
-    p{
-        font-family: arial;
-        font-size: 25px;
-        margin-left: 8px;
-        font-weight: bold;
-        color:white;
-        text-shadow: 1px 1px grey;
-    }
-    .value:hover{
-        color: blue;
-        font-size: 22px;
-    }
-    #list{
-        font-weight: bold;
-        color: red;
-    }
-    input{
-        border: none;
-        background-color: rgb(236, 233, 14);
-        font-size: 20px;
-        outline: none;
-
-    }
-   
-    
-    </style>
-</head>
-<body>
-    <div id="container">
-    <h1>Update Your Name</h1>
-    <p>Your name:<input type="text" placeholder="&nbsp Enter Your Name!">  </p>
-    </div>
-    <ol id="list">
-
-    </ol>
-
-
-    <script src="script.js">
-    </script>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>To Do List</title>
+		<link
+			rel="stylesheet"
+			href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+			integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+			crossorigin="anonymous"
+		/>
+	</head>
+	<body>
+		<section>
+			<div class="container p-2">
+				<div class="row">
+					<div class="col-md-8">
+						<input type="text" placeholder="Enter task" class="form-control" id="task" />
+					</div>
+					<div class="col-md-4">
+						<button class="btn btn-success btn-block" onclick="addTask()" id="addBtn">Add</button>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-12 p-4">
+						<ul class="list-group" id="todoList">
+							<!-- <li class="list-group-item">Cras justo odio</li>
+							<li class="list-group-item">Dapibus ac facilisis in</li>
+							<li class="list-group-item">Morbi leo risus</li>
+							<li class="list-group-item">Porta ac consectetur ac</li>
+							<li class="list-group-item">Vestibulum at eros</li> -->
+						</ul>
+					</div>
+				</div>
+			</div>
+		</section>
+		<script
+			src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+			integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+			integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+			crossorigin="anonymous"
+		></script>
+		<script src="js/bootstrap.min.js"></script>
+		<script src="js/app.js"></script>
+	</body>
 </html>
