--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 		<section>
-			<div class="container p-2">
+			<div class="container p-2 mt-5">
 				<div class="row">
 					<div class="col-md-8">
 						<input type="text" placeholder="Enter task" class="form-control" id="task" />
